--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Добавление клиента</title>
+    <title>Bookstore</title>
 </head>
 <body class="bg-light">
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Банк</a>
+    <a class="navbar-brand" href="/">Bookstore</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05"
             aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,23 +23,22 @@
     <div class="collapse navbar-collapse" id="navbarsExample05">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/">Клиенты банка<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Book list<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/transactions">История транзакций<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/orders">Order history<span class="sr-only">(current)</span></a>
             </li>
         </ul>
-        <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Введите текст" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
-        </form>
     </div>
 </nav>
+
 <div class="container">
+
     <div class="py-5 text-center">
-        <h2>Добавление клиента</h2>
-        <p class="lead">Заполните поля и нажмите кнопку 'Добавить клиента'</p>
+        <h2>Orders</h2>
+        <p class="lead">Here you can see a list of orders booked within our shop</p>
     </div>
+    <br/>
 
     <form action="#" th:object="${book}"
           class="needs-validation" novalidate>
