--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,10 +23,10 @@
     <div class="collapse navbar-collapse" id="navbarsExample05">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/">Book list<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">Book list<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/transactions">Order history<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/orders">Order history<span class="sr-only">(current)</span></a>
             </li>
         </ul>
         <!--<form class="form-inline mt-2 mt-md-0">-->
@@ -76,8 +76,8 @@
             <tr th:each="book : ${books}" style="cursor: pointer" th:onclick="'javascript:rowClicked(\'' + ${book.id} + '\');'">
                 <a th:href="@{~/edit_book(id=${book.id})}" aria-disabled="true">
                     <td class="align-middle"><span th:text="${book.title}"/></td>
-                    <td class="align-middle"><span th:text="${book.genre}"/></td>
-                    <td class="align-middle"><span th:text="${book.author}"/></td>
+                    <td class="align-middle"><span th:text="${book.showGenres()}"/></td>
+                    <td class="align-middle"><span th:text="${book.showAuthors()}"/></td>
                     <td class="align-middle"><span th:text="${book.price}"/></td>
                     <td class="align-middle">
                         <a th:href="@{~/edit_book(id=${book.id})}" class="btn btn-lg btn-block btn-outline-primary"
