filters and search

--- a/src/main/resources/templates/add_book.html
+++ b/src/main/resources/templates/add_book.html
@@ -10,12 +10,11 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Bookstore</title>
-
 </head>
 <body class="bg-light">
-
-<!-- Optional JavaScript -->
+<!-- JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -27,19 +26,45 @@
         crossorigin="anonymous"></script>
 
 <script th:inline="javascript">
-    // $(document).ready(function(){
-    //     var i=1;
-    //     $(document).on('click', '.btn_add', function(){
-    //         i++;
-    //         $('#dynamic_field').append('<tr id="row'+i+'"><td><input field="author['+i+']" type="text" placeholder="Enter book author" class="form-control name_list" value="" id="author'+i+'" required/></td>\n' +
-    //             '                                                <td><button type="button" name="remove" id="'+i+'" class="btn btn-danger btn_remove">X</button></td></tr>');
-    //     });
-    //
-    //     $(document).on('click', '.btn_remove', function(){
-    //         var button_id = $(this).attr("id");
-    //         $('#row'+button_id+'').remove();
-    //     });
-    // });
+    var i = 1;
+    $(document).ready(function () {
+        $(document).on('click', '.btn_add', function () {
+            i++;
+            $('#dynamic_field').append('<tr id="row' + i + '"><td><input name="author" type="text" placeholder="Enter book author" class="form-control author_list" value="" id="author' + i + '" required/></td>\n' +
+                '<td><button type="button" name="remove" id="' + i + '" class="btn btn-danger btn_remove">X</button></td></tr>');
+        });
+        $(document).on('click', '.btn_remove', function () {
+            var button_id = $(this).attr("id");
+            $('#row' + button_id + '').remove();
+        });
+        $(document).on('click', '.btn_add_genre', function () {
+            i++;
+            $('#dynamic_field_genre').append('<tr id="row' + i + '"><td><input name="genre" type="text" placeholder="" class="form-control genre-list" value="" id="genre' + i + '" required/></td>\n' +
+                '<td><button type="button" name="remove" id="' + i + '" class="btn btn-danger btn_remove">X</button></td></tr>');
+            var genre = document.getElementById("mainSelector").value;
+            document.getElementById("genre" + i).value = genre;
+        });
+        $(document).on('click', '.btn_remove_genre', function () {
+            var button_id = $(this).attr("id");
+            $('#row' + button_id + '').remove();
+        });
+    });
+
+    $('#submitForm').submit(function (e) {
+        var form = this;
+        e.preventDefault();
+        var formData = {}
+        $.each(this, function (i, v) {
+            var input = $(v);
+            formData[input.attr("name")] = input.val();
+        });
+        $.ajax({
+            type: form.attr('method'), // method attribute of form
+            url: form.attr('action'),  // action attribute of form
+            dataType: 'json',
+            data: JSON.stringify(formData)
+        });
+    });
 </script>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -61,16 +86,27 @@
     </div>
 </nav>
 
-<div class="container">
+<!--The first version of this page was based on thymeleaf method of posting an object to the server.-->
+<!--Using th:action, th:object, th:method, th:field attributes like that:-->
 
+<!--<form th:action="@{/add_book}" th:object="${book}" th:method="post">-->
+        <!--<label for="title">Title</label>-->
+        <!--<input th:field="*{title}" id="title" value="">-->
+<!--<button type="submit" value="Submit">Add new book</button>-->
+
+<!--But it could have only static th:fields because it's server-side function. I would like to have dynamic fields-->
+<!--for author and genre parametrs, so admin could add as much of them as he wants, so i decided to read data from input fields -->
+<!--and send them using ajax.js -->
+
+
+<div class="container">
     <div class="py-5 text-center">
         <h2>Add new book</h2>
         <p class="lead">Here you can add new book by filling following fields</p>
     </div>
     <br/>
 
-    <form enctype="multipart/form-data" action="#" th:action="@{/add_book}" th:object="${book}" method="post"
-          class="needs-validation" novalidate>
+    <form id="submitForm" action="/add_book" method="post">&nbsp;
         <div class="row">
             <div class="col-md-12">
                 <h4 class="mb-3">Fields to fill:</h4>
@@ -79,7 +115,7 @@
                         <div class="col">
                             <div class="col-md-auto mb-3">
                                 <label for="title">Title</label>
-                                <input th:field="*{title}" type="text" class="form-control" id="title" placeholder=""
+                                <input name="title" type="text" class="form-control" id="title" placeholder=""
                                        value="" required>
                             </div>
 
@@ -89,74 +125,77 @@
 
                             <div class="col-md-auto mb-3">
                                 <div class="row">
-                                    <div class="col">
-                                        <select class="browser-default custom-select" th:field="*{genre}">
-                                            <option id="genre"
-                                                    value="" required
-                                                    th:each="genre:${allGenres}"
-                                                    th:value="${genre}"
-                                                    th:text="${genre}"></option>
-                                        </select>
+                                   <div class="col-md-auto mb-3 form-group">
+                                        <div class="table-responsive">
+                                            <table class="table table-borderless" id="dynamic_field_genre">
+                                                <tr>
+                                                    <td>
+                                                        <select id="mainSelector" name="genre" class="browser-default custom-select">
+                                                            <option id="genre"
+                                                                    value=""
+                                                                    th:each="genre:${allGenres}"
+                                                                    th:value="${genre}"
+                                                                    th:text="${genre}"></option>
+                                                        </select>
+                                                    </td>
+                                                    <td>
+                                                        <button type="button" name="add" class="btn btn-success btn_add_genre">Add
+                                                            More
+                                                        </button>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
                                     </div>
                                     <div col>
                                         <!--<button id="newGenre" class="btn btn-primary btn-lg btn-block" type="button"-->
-                                                <!--value="">+</button>-->
+                                        <!--value="">+</button>-->
                                     </div>
                                 </div>
                             </div>
 
                             <div class="col-md-auto mb-3">
                                 <label for="description">Description</label>
-                                <input th:field="*{description}" type="text" class="form-control" id="description"
-                                       placeholder=""
-                                       value="" required>
-                            </div>
-
-                            <!--<div class="col-md-auto mb-3">-->
-                                <!--<label for="author">Author</label>-->
-                                <!--<input th:field="*{author}" type="text" class="form-control" id="author" placeholder=""-->
-                                       <!--value="" required>-->
-                            <!--</div>-->
-
-                            <div class="col-md-auto mb-3 form-group">
-                                <label for="author">Author</label>
-                                    <div class="table-responsive">
-                                        <table class="table table-borderless" id="dynamic_field">
-                                            <tr>
-                                                <td><input th:field="*{author}" type="text" placeholder="Enter book author" class="form-control name_list" id="author" value="" required/></td>
-                                                <td><button type="button" name="add" class="btn btn-success btn_add">Add More</button></td>
-                                            </tr>
-                                        </table>
-                                    </div>
+                                <textarea name="description" rows="3" class="form-control" id="description"
+                                          placeholder=""
+                                          value="" required></textarea>
                             </div>
 
                             <div class="col-md-auto mb-3">
                                 <label for="price">Price ($)</label>
-                                <input th:field="*{price}" type="number" class="form-control" id="price" placeholder=""
+                                <input name="price" type="number" class="form-control" id="price" placeholder=""
                                        value="" required>
                             </div>
                         </div>
                         <div class="col">
-                            <!--<div class="img-wrap">-->
-                            <!--<img width="350" height="480" src="../static/img/book.png" th:src="@{img/book.png}"-->
-                            <!--class="img-fluid img-thumbnail" alt="A book">-->
-                            <!--<h1>text</h1>-->
-                            <!--</div>-->
+                            <div class="col-md-auto mb-3 form-group">
+                                <label for="author">Author</label>
+                                <div class="table-responsive">
+                                    <table class="table table-borderless" id="dynamic_field">
+                                        <tr>
+                                            <td><input name="author" type="text" placeholder="Enter book author"
+                                                       class="form-control author_list" id="author" value="" required/>
+                                            </td>
+                                            <td>
+                                                <button type="button" name="add" class="btn btn-success btn_add">Add
+                                                    More
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <hr class="mb-4">
-        <button class="btn btn-primary btn-lg btn-block" type="submit" value="Submit">Add new book</button>
+        <button class="btn btn-primary btn-lg btn-block submit-btn" type="submit" value="Submit">Add new book</button>
 
     </form>
 </div>
 
 <br/><br/><br/>
-
-
-
-
 </body>
 </html>
