filters and search

--- a/src/main/resources/templates/add_book.html
+++ b/src/main/resources/templates/add_book.html
@@ -106,7 +106,7 @@
     </div>
     <br/>
 
-    <form id="submitForm" action="/add_book" method="post">&nbsp;
+    <form id="submitForm" action="/add_book" method="post">
         <div class="row">
             <div class="col-md-12">
                 <h4 class="mb-3">Fields to fill:</h4>
